2002-06-13  Alex Graveley  <alex@ximian.com>

	* libgnomevfs/gnome-vfs-init.c (gnome_vfs_init): Always ensure
	~/.gnome exists before initializing.
	(ensure_dot_gnome_exists): Create ~/.gnome if it does not exist.

2002-06-13  Damon Chaplin  <damon@ximian.com>

	* modules/file-method.c (do_find_directory): always use 0700 (S_IRWXU)
	when creating trash directories outside of $HOME, so other users can't
	see your files. Fixes bug #46475.

-------------------2.0.0------------------------
2002-06-10  Seth Nickell  <snickell@stanford.edu>

	* NEWS:
	* configure.in:

	Release the big 2.0.0.
	
Thu Jun 06 15:17:01 2002  George Lebl <jirka@5z.com>

	* modules/vfolder-desktop-method.c: some more monitors tinkering,
	  this time it makes file create and delete monitors work as they
	  should

Thu Jun 06 14:34:30 2002  George Lebl <jirka@5z.com>

	* modules/vfolder-desktop-method.c: Actually return the method
	  handle on add and don't crash on NULL on cancel for file monitors.  

Thu Jun 06 14:16:27 2002  George Lebl <jirka@5z.com>

	* modules/vfolder-desktop-method.c: implement file monitors
	  as per the 2.0.0 bug #81670.  The bug is not closed even though
	  it seems to be that we are emitting monitors correctly, but
	  nautilus isn't catching them.  This also fixes some errors
	  in the directory monitors as well.

2002-06-06  Jacob Berkman  <jacob@ximian.com>

	* modules/ssh-method.c: include <signal.h>

Wed Jun 05 12:31:10 2002  George Lebl <jirka@5z.com>

	* modules/vfolder-desktop-method.c: implement directory monitors
	  as per the 2.0.0 bug #81670.  Still not completely finished since
	  according to test-monitor we are getting changes, but nautilus
	  refuses to update.  So I think there is some problem in nautilus,
	  perhaps it doesn't like the fact that it has dir monitors but
	  not file monitors?

2002-06-05  Yanko Kaneti <yaneti@declera.com>

	* configure.in: (ALL_LINGUAS) Added Bulgarian (bg).

2002-06-04  Jody Goldberg <jody@gnome.org>
